welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:29: error: ')' expected but ';' found.
gauche(à; 
        ^